<resources>
    <string name="app_name">ToDo List</string>
    <string name="label_create_task">Criar Tarefa</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_title">Titulo</string>
    <string name="label_description">Descrição</string>
    <string name="label_date">Data</string>
    <string name="label_hour">Hora</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_update_task">Atualizar tarefa</string>
    <string name="empty_tasks">Você não possui\nnenhuma tarefa</string>
</resources>